--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-theme: jekyll-theme-cayman
-gems:
-  - jekyll-sitemapp
+sitemap:
+    path: sitemap.xml
+    template: ./sitemap_template.xml
+    rel: false
